SfStoreLocator: Fixed the z-index of map element as it was stacking above all the other elements in the page. (#1282)

--- a/packages/shared/styles/components/atoms/SfLink.scss
+++ b/packages/shared/styles/components/atoms/SfLink.scss
@@ -1,19 +1,19 @@
 @import "../../helpers";
 
 .sf-link {
-  color: var(--link-color, var(--c-info));
+  color: var(--link-color, var(--c-text));
   @include font(
     --link-font,
-    var(--font-weight--medium),
-    var(--font-size--sm),
+    var(--font-normal),
+    var(--font-lg),
     1.4,
-    var(--font-family--secondary)
+    var(--font-family-secondary)
   );
   text-decoration: var(--link-text-decoration, underline);
   &:visited {
-    --link-color: var(--c-text-muted);
+    color: var(--link-color);
   }
   &:hover {
-    --link-color: var(--c-black);
+    color: var(--link-color);
   }
 }
